Update readme to explain the current state of the package better

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eslint-config-react-app-ts",
   "version": "1.0.1",
-  "description": "ESLint configuration used by Create React App TypeScript",
+  "description": "Create React App's ESLint configuration for TypeScript",
   "repository": "nickmccurdy/eslint-config-react-app-ts",
   "keywords": [
     "eslint",
