Migrate to @eslint-typescript/parser
Ref: https://eslint.org/blog/2019/01/future-typescript-eslint

--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
   "peerDependencies": {
     "eslint": ">=4.1.0",
     "eslint-config-react-app": "*",
-    "typescript-eslint-parser": "*"
+    "@typescript-eslint/parser": "*"
   }
 }
